feat: add competitive updates and player endpoints, refine caching with specific TTLs, and introduce a match history refresh.